# ComfyUI-CometAPI

./: .gitignore  LICENSE  README.md  __init__.py  cometapi_chat.py  nodes.py  pyproject.toml
private_channels/: openrouter.json  openrouter.py  私有渠道适配指南.md
